kubernetes/deployment-datatorgetbackend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-datatorgetbackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datatorgetbackend
  template:
    metadata:
      labels:
        app: datatorgetbackend
    spec:
      containers:
      - name: bokningsapi
        image: datatorgetpoc/bokningsapi
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 30001
      - name: kundapi
        image: datatorgetpoc/kundapi
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 30002
      - name: kommunikationsapi
        image: datatorgetpoc/kommunikationsapi
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 30003
      - name: betalningsapi
        image: datatorgetpoc/betalningsapi
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 30004
      - name: valideringsapi
        image: datatorgetpoc/valideringsapi
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 30005
      - name: crmapi
        image: datatorgetpoc/crmapi
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 30006
      - name: kopplingstjanst
        image: datatorgetpoc/kopplingstjanst
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
      - name: identitysvc
        image: datatorgetpoc/identitysvc
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
