kubernetes/deployment-datatorgetwebui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-datatorgetwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datatorgetwebui
  template:
    metadata:
      labels:
        app: datatorgetwebui
    spec:
      containers:
      - name: webui
        image: datatorgetpoc/webui
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
