kubernetes/deployment-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      volumes:
      - name: volume-config-rabbitmq
        configMap:
            name: config-rabbitmq
      containers:
      - name: rabbitmq
        image: rabbitmq:management
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
          - name: http
            protocol: TCP
            containerPort: 15672
          - name: amqp
            protocol: TCP
            containerPort: 5672
        volumeMounts:
          - name: volume-config-rabbitmq
            mountPath: /etc/rabbitmq/config
            readOnly: true
