kubernetes/svc-datatorgetbackendsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-datatorgetbackend
spec:
  type: NodePort
  ports:
  - name: bokningsapi
    port: 30001
    targetPort: 30001
    nodePort: 30001
  - name: kundapi
    port: 30002
    targetPort: 30002
    nodePort: 30002
  - name: kommunikationsapi
    port: 30003
    targetPort: 30003
    nodePort: 30003
  - name: betalningsapi
    port: 30004
    targetPort: 30004
    nodePort: 30004
  - name: rabbitmq
    port: 5672
    targetPort: 5672
    nodePort: 31001
  - name: rabbitmq-management
    port: 15672
    targetPort: 15672
    nodePort: 32001
  - name: mongo
    port: 27017
    targetPort: 27017
    nodePort: 31002
  - name: mongo-express
    port: 8081
    targetPort: 8081
    nodePort: 32002
  selector:
    app: datatorgetbackend
