kubernetes/svc-datatorgetwebui.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-datatorgetwebui
spec:
  type: NodePort
  ports:
  - name: webui
    port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: datatorgetwebui
