kubernetes/svc-krakend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-krakend
spec:
  type: NodePort
  ports:
  - name: krakend
    port: 30100
    targetPort: 30100
    nodePort: 30100
  selector:
    app: krakend
