kubernetes/svc-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-rabbitmq
spec:
  type: NodePort
  ports:
  - name: rabbitmq
    port: 5672
    targetPort: 5672
    nodePort: 31001

  - name: rabbitmq-management
    port: 15672
    targetPort: 15672
    nodePort: 32001

  selector:
    app: rabbitmq
