kubernetes/ingress-kong-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-kong-backend
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: rl-by-ip
    konghq.com/strip-path: "true"
spec:
  rules:
  - host: localhost:30080
    http:
      paths:
      - path: /bokningsapi
        backend:
          serviceName: svc-datatorgetbackend
          servicePort: 30001
